Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/apps/resources-wcm/src/main/webapp/pdf.js/viewer.css
+++ b/apps/resources-wcm/src/main/webapp/pdf.js/viewer.css
@@ -1018,7 +1018,7 @@ a:focus > .thumbnail > .thumbnailSelectionRing,
 }
 
 .thumbnail.selected > .thumbnailSelectionRing {
-	border: 3px solid #999999;
+	border: 3px solid #767676;
 	margin: -3px;
 }
 
