--- a/apps/resources-wcm/src/main/webapp/skin/less/ecms/portlets/explorer/Xeditable/bootstrap3-editable.less
+++ b/apps/resources-wcm/src/main/webapp/skin/less/ecms/portlets/explorer/Xeditable/bootstrap3-editable.less
@@ -301,12 +301,12 @@ a.editable-click.editable-disabled:hover {
 }
 .datepicker table tr td.old,
 .datepicker table tr td.new {
-  color: #999999;
+  color: #767676;
 }
 .datepicker table tr td.disabled,
 .datepicker table tr td.disabled:hover {
   background: none;
-  color: #999999;
+  color: #767676;
   cursor: default;
 }
 .datepicker table tr td.today,
@@ -546,7 +546,7 @@ a.editable-click.editable-disabled:hover {
 .datepicker table tr td span.disabled,
 .datepicker table tr td span.disabled:hover {
   background: none;
-  color: #999999;
+  color: #767676;
   cursor: default;
 }
 .datepicker table tr td span.active,
@@ -602,7 +602,7 @@ a.editable-click.editable-disabled:hover {
 }
 .datepicker table tr td span.old,
 .datepicker table tr td span.new {
-  color: #999999;
+  color: #767676;
 }
 .datepicker th.datepicker-switch {
   width: 145px;
